[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "anypoint"
authors = [{ name = "dlopes7", email = "davidribeirolopes@gmail.com" }]
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["requests>=2.28.1"]


[project.urls]
Home = "https://github.com/dlopes7/anypoint-api-python-client"
